nr.output
State 42 conflicts: 1 shift/reduce
State 44 conflicts: 16 shift/reduce
State 102 conflicts: 3 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: ε
    2         | programa bloco

    3 bloco: ato
    4      | cena
    5      | dialogo
    6      | declaracao
    7      | declaracaoCenario
    8      | concatenarCenario
    9      | substituiCenario
   10      | alteracaoElenco
   11      | if_sentenca

   12 declaracaoCenario: ABRE_PARENTESES texto VIRGULA texto FECHA_PARENTESES

   13 concatenarCenario: ADICIONAR_CENARIO INICIO texto FIM

   14 substituiCenario: SUBSTITUIR_CENARIO texto POR texto NO_CENARIO

   15 texto: palavra
   16      | texto NUMERO
   17      | texto palavra

   18 palavra: TOKEN
   19        | ADJETIVO_POSITIVO
   20        | ADJETIVO_NEGATIVO
   21        | ARTIGO
   22        | ENTRE
   23        | SOMAR
   24        | ENTRAM
   25        | SAEM
   26        | TODOS
   27        | E
   28        | ENTAO
   29        | NAO
   30        | FOR
   31        | MAIOR
   32        | MENOR
   33        | IGUAL

   34 adjetivos: ADJETIVO_POSITIVO
   35          | ADJETIVO_NEGATIVO
   36          | TOKEN
   37          | adjetivos ADJETIVO_POSITIVO
   38          | adjetivos ADJETIVO_NEGATIVO
   39          | adjetivos TOKEN
   40          | adjetivos ENTRE

   41 declaracao: declaracaoInicio texto FIM

   42 declaracaoInicio: texto VIRGULA

   43 alteracaoElenco: ABRE_COLCHETES texto FECHA_COLCHETES

   44 valor: NUMERO
   45      | TU MESMO
   46      | EU
   47      | texto

   48 expressao: valor
   49          | ARTIGO SOMAR ENTRE valor E valor
   50          | ARTIGO SUBTRAIR ENTRE valor E valor
   51          | ARTIGO MULTIPLICAR ENTRE valor E valor
   52          | ARTIGO DIVIDIR ENTRE valor E valor

   53 if_sentenca: SE condicao VIRGULA ENTAO expressao

   54 condicao: expressao FOR MAIOR expressao
   55         | expressao FOR MENOR expressao
   56         | expressao FOR IGUAL expressao
   57         | expressao NAO FOR MENOR expressao
   58         | expressao NAO FOR MAIOR expressao
   59         | expressao NAO FOR IGUAL expressao

   60 dialogo: inicioDialogo MOSTRAR_CENARIO
   61        | inicioDialogo if_sentenca FIM
   62        | inicioDialogo texto FIM
   63        | inicioDialogo texto VIRGULA TU EH adjetivos FIM

   64 $@1: ε

   65 dialogo: inicioDialogo texto VIRGULA TU EH $@1 expressao FIM

   66 inicioDialogo: texto INICIO

   67 ato: ATO

   68 cena: CENA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    MAIOR <texto> (258) 31 54 58
    MENOR <texto> (259) 32 55 57
    IGUAL <texto> (260) 33 56 59
    NAO <texto> (261) 29 57 58 59
    FOR <texto> (262) 30 54 55 56 57 58 59
    ENTAO <texto> (263) 28 53
    EU <texto> (264) 46
    SE <texto> (265) 53
    SAEM <texto> (266) 25
    ENTRAM <texto> (267) 24
    TODOS <texto> (268) 26
    SOMAR <texto> (269) 23 49
    SUBTRAIR <texto> (270) 50
    DIVIDIR <texto> (271) 52
    MULTIPLICAR <texto> (272) 51
    INICIO <texto> (273) 13 66
    FIM <texto> (274) 13 41 61 62 63 65
    ABRE_COLCHETES <texto> (275) 43
    FECHA_COLCHETES <texto> (276) 43
    ABRE_PARENTESES <texto> (277) 12
    FECHA_PARENTESES <texto> (278) 12
    VIRGULA <texto> (279) 12 42 53 63 65
    TOKEN <texto> (280) 18 36 39
    ADJETIVO_POSITIVO <texto> (281) 19 34 37
    ADJETIVO_NEGATIVO <texto> (282) 20 35 38
    TU <texto> (283) 45 63 65
    EH <texto> (284) 63 65
    E <texto> (285) 27 49 50 51 52
    ENTRE <texto> (286) 22 40 49 50 51 52
    ARTIGO <texto> (287) 21 49 50 51 52
    MESMO <texto> (288) 45
    NUMERO <texto> (289) 16 44
    ADICIONAR_CENARIO <texto> (290) 13
    SUBSTITUIR_CENARIO <texto> (291) 14
    POR <texto> (292) 14
    NO_CENARIO <texto> (293) 14
    MOSTRAR_CENARIO <texto> (294) 60
    ATO <inteiro> (295) 67
    CENA <inteiro> (296) 68


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    programa (43)
        on left: 1 2
        on right: 0 2
    bloco <texto> (44)
        on left: 3 4 5 6 7 8 9 10 11
        on right: 2
    declaracaoCenario (45)
        on left: 12
        on right: 7
    concatenarCenario (46)
        on left: 13
        on right: 8
    substituiCenario (47)
        on left: 14
        on right: 9
    texto <texto> (48)
        on left: 15 16 17
        on right: 12 13 14 16 17 41 42 43 47 62 63 65 66
    palavra <texto> (49)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
        on right: 15 17
    adjetivos <inteiro> (50)
        on left: 34 35 36 37 38 39 40
        on right: 37 38 39 40 63
    declaracao <texto> (51)
        on left: 41
        on right: 6
    declaracaoInicio <texto> (52)
        on left: 42
        on right: 41
    alteracaoElenco (53)
        on left: 43
        on right: 10
    valor <inteiro> (54)
        on left: 44 45 46 47
        on right: 48 49 50 51 52
    expressao <inteiro> (55)
        on left: 48 49 50 51 52
        on right: 53 54 55 56 57 58 59 65
    if_sentenca <inteiro> (56)
        on left: 53
        on right: 11 61
    condicao <inteiro> (57)
        on left: 54 55 56 57 58 59
        on right: 53
    dialogo <texto> (58)
        on left: 60 61 62 63 65
        on right: 5
    $@1 (59)
        on left: 64
        on right: 65
    inicioDialogo <texto> (60)
        on left: 66
        on right: 60 61 62 63 65
    ato <texto> (61)
        on left: 67
        on right: 3
    cena <texto> (62)
        on left: 68
        on right: 4


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 (programa)

    programa  go to state 1


State 1

    0 $accept: programa • $end
    2 programa: programa • bloco

    $end                shift, and go to state 2
    MAIOR               shift, and go to state 3
    MENOR               shift, and go to state 4
    IGUAL               shift, and go to state 5
    NAO                 shift, and go to state 6
    FOR                 shift, and go to state 7
    ENTAO               shift, and go to state 8
    SE                  shift, and go to state 9
    SAEM                shift, and go to state 10
    ENTRAM              shift, and go to state 11
    TODOS               shift, and go to state 12
    SOMAR               shift, and go to state 13
    ABRE_COLCHETES      shift, and go to state 14
    ABRE_PARENTESES     shift, and go to state 15
    TOKEN               shift, and go to state 16
    ADJETIVO_POSITIVO   shift, and go to state 17
    ADJETIVO_NEGATIVO   shift, and go to state 18
    E                   shift, and go to state 19
    ENTRE               shift, and go to state 20
    ARTIGO              shift, and go to state 21
    ADICIONAR_CENARIO   shift, and go to state 22
    SUBSTITUIR_CENARIO  shift, and go to state 23
    ATO                 shift, and go to state 24
    CENA                shift, and go to state 25

    bloco              go to state 26
    declaracaoCenario  go to state 27
    concatenarCenario  go to state 28
    substituiCenario   go to state 29
    texto              go to state 30
    palavra            go to state 31
    declaracao         go to state 32
    declaracaoInicio   go to state 33
    alteracaoElenco    go to state 34
    if_sentenca        go to state 35
    dialogo            go to state 36
    inicioDialogo      go to state 37
    ato                go to state 38
    cena               go to state 39


State 2

    0 $accept: programa $end •

    $default  accept


State 3

   31 palavra: MAIOR •

    $default  reduce using rule 31 (palavra)


State 4

   32 palavra: MENOR •

    $default  reduce using rule 32 (palavra)


State 5

   33 palavra: IGUAL •

    $default  reduce using rule 33 (palavra)


State 6

   29 palavra: NAO •

    $default  reduce using rule 29 (palavra)


State 7

   30 palavra: FOR •

    $default  reduce using rule 30 (palavra)


State 8

   28 palavra: ENTAO •

    $default  reduce using rule 28 (palavra)


State 9

   53 if_sentenca: SE • condicao VIRGULA ENTAO expressao

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    EU                 shift, and go to state 40
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    TU                 shift, and go to state 41
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 42
    NUMERO             shift, and go to state 43

    texto      go to state 44
    palavra    go to state 31
    valor      go to state 45
    expressao  go to state 46
    condicao   go to state 47


State 10

   25 palavra: SAEM •

    $default  reduce using rule 25 (palavra)


State 11

   24 palavra: ENTRAM •

    $default  reduce using rule 24 (palavra)


State 12

   26 palavra: TODOS •

    $default  reduce using rule 26 (palavra)


State 13

   23 palavra: SOMAR •

    $default  reduce using rule 23 (palavra)


State 14

   43 alteracaoElenco: ABRE_COLCHETES • texto FECHA_COLCHETES

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21

    texto    go to state 48
    palavra  go to state 31


State 15

   12 declaracaoCenario: ABRE_PARENTESES • texto VIRGULA texto FECHA_PARENTESES

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21

    texto    go to state 49
    palavra  go to state 31


State 16

   18 palavra: TOKEN •

    $default  reduce using rule 18 (palavra)


State 17

   19 palavra: ADJETIVO_POSITIVO •

    $default  reduce using rule 19 (palavra)


State 18

   20 palavra: ADJETIVO_NEGATIVO •

    $default  reduce using rule 20 (palavra)


State 19

   27 palavra: E •

    $default  reduce using rule 27 (palavra)


State 20

   22 palavra: ENTRE •

    $default  reduce using rule 22 (palavra)


State 21

   21 palavra: ARTIGO •

    $default  reduce using rule 21 (palavra)


State 22

   13 concatenarCenario: ADICIONAR_CENARIO • INICIO texto FIM

    INICIO  shift, and go to state 50


State 23

   14 substituiCenario: SUBSTITUIR_CENARIO • texto POR texto NO_CENARIO

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21

    texto    go to state 51
    palavra  go to state 31


State 24

   67 ato: ATO •

    $default  reduce using rule 67 (ato)


State 25

   68 cena: CENA •

    $default  reduce using rule 68 (cena)


State 26

    2 programa: programa bloco •

    $default  reduce using rule 2 (programa)


State 27

    7 bloco: declaracaoCenario •

    $default  reduce using rule 7 (bloco)


State 28

    8 bloco: concatenarCenario •

    $default  reduce using rule 8 (bloco)


State 29

    9 bloco: substituiCenario •

    $default  reduce using rule 9 (bloco)


State 30

   16 texto: texto • NUMERO
   17      | texto • palavra
   42 declaracaoInicio: texto • VIRGULA
   66 inicioDialogo: texto • INICIO

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    INICIO             shift, and go to state 52
    VIRGULA            shift, and go to state 53
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 54

    palavra  go to state 55


State 31

   15 texto: palavra •

    $default  reduce using rule 15 (texto)


State 32

    6 bloco: declaracao •

    $default  reduce using rule 6 (bloco)


State 33

   41 declaracao: declaracaoInicio • texto FIM

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21

    texto    go to state 56
    palavra  go to state 31


State 34

   10 bloco: alteracaoElenco •

    $default  reduce using rule 10 (bloco)


State 35

   11 bloco: if_sentenca •

    $default  reduce using rule 11 (bloco)


State 36

    5 bloco: dialogo •

    $default  reduce using rule 5 (bloco)


State 37

   60 dialogo: inicioDialogo • MOSTRAR_CENARIO
   61        | inicioDialogo • if_sentenca FIM
   62        | inicioDialogo • texto FIM
   63        | inicioDialogo • texto VIRGULA TU EH adjetivos FIM
   65        | inicioDialogo • texto VIRGULA TU EH $@1 expressao FIM

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SE                 shift, and go to state 9
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    MOSTRAR_CENARIO    shift, and go to state 57

    texto        go to state 58
    palavra      go to state 31
    if_sentenca  go to state 59


State 38

    3 bloco: ato •

    $default  reduce using rule 3 (bloco)


State 39

    4 bloco: cena •

    $default  reduce using rule 4 (bloco)


State 40

   46 valor: EU •

    $default  reduce using rule 46 (valor)


State 41

   45 valor: TU • MESMO

    MESMO  shift, and go to state 60


State 42

   21 palavra: ARTIGO •
   49 expressao: ARTIGO • SOMAR ENTRE valor E valor
   50          | ARTIGO • SUBTRAIR ENTRE valor E valor
   51          | ARTIGO • MULTIPLICAR ENTRE valor E valor
   52          | ARTIGO • DIVIDIR ENTRE valor E valor

    SOMAR        shift, and go to state 61
    SUBTRAIR     shift, and go to state 62
    DIVIDIR      shift, and go to state 63
    MULTIPLICAR  shift, and go to state 64

    SOMAR     [reduce using rule 21 (palavra)]
    $default  reduce using rule 21 (palavra)


State 43

   44 valor: NUMERO •

    $default  reduce using rule 44 (valor)


State 44

   16 texto: texto • NUMERO
   17      | texto • palavra
   47 valor: texto •

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 54

    MAIOR              [reduce using rule 47 (valor)]
    MENOR              [reduce using rule 47 (valor)]
    IGUAL              [reduce using rule 47 (valor)]
    NAO                [reduce using rule 47 (valor)]
    FOR                [reduce using rule 47 (valor)]
    ENTAO              [reduce using rule 47 (valor)]
    SAEM               [reduce using rule 47 (valor)]
    ENTRAM             [reduce using rule 47 (valor)]
    TODOS              [reduce using rule 47 (valor)]
    SOMAR              [reduce using rule 47 (valor)]
    TOKEN              [reduce using rule 47 (valor)]
    ADJETIVO_POSITIVO  [reduce using rule 47 (valor)]
    ADJETIVO_NEGATIVO  [reduce using rule 47 (valor)]
    E                  [reduce using rule 47 (valor)]
    ENTRE              [reduce using rule 47 (valor)]
    ARTIGO             [reduce using rule 47 (valor)]
    $default           reduce using rule 47 (valor)

    palavra  go to state 55


State 45

   48 expressao: valor •

    $default  reduce using rule 48 (expressao)


State 46

   54 condicao: expressao • FOR MAIOR expressao
   55         | expressao • FOR MENOR expressao
   56         | expressao • FOR IGUAL expressao
   57         | expressao • NAO FOR MENOR expressao
   58         | expressao • NAO FOR MAIOR expressao
   59         | expressao • NAO FOR IGUAL expressao

    NAO  shift, and go to state 65
    FOR  shift, and go to state 66


State 47

   53 if_sentenca: SE condicao • VIRGULA ENTAO expressao

    VIRGULA  shift, and go to state 67


State 48

   16 texto: texto • NUMERO
   17      | texto • palavra
   43 alteracaoElenco: ABRE_COLCHETES texto • FECHA_COLCHETES

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    FECHA_COLCHETES    shift, and go to state 68
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 54

    palavra  go to state 55


State 49

   12 declaracaoCenario: ABRE_PARENTESES texto • VIRGULA texto FECHA_PARENTESES
   16 texto: texto • NUMERO
   17      | texto • palavra

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    VIRGULA            shift, and go to state 69
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 54

    palavra  go to state 55


State 50

   13 concatenarCenario: ADICIONAR_CENARIO INICIO • texto FIM

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21

    texto    go to state 70
    palavra  go to state 31


State 51

   14 substituiCenario: SUBSTITUIR_CENARIO texto • POR texto NO_CENARIO
   16 texto: texto • NUMERO
   17      | texto • palavra

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 54
    POR                shift, and go to state 71

    palavra  go to state 55


State 52

   66 inicioDialogo: texto INICIO •

    $default  reduce using rule 66 (inicioDialogo)


State 53

   42 declaracaoInicio: texto VIRGULA •

    $default  reduce using rule 42 (declaracaoInicio)


State 54

   16 texto: texto NUMERO •

    $default  reduce using rule 16 (texto)


State 55

   17 texto: texto palavra •

    $default  reduce using rule 17 (texto)


State 56

   16 texto: texto • NUMERO
   17      | texto • palavra
   41 declaracao: declaracaoInicio texto • FIM

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    FIM                shift, and go to state 72
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 54

    palavra  go to state 55


State 57

   60 dialogo: inicioDialogo MOSTRAR_CENARIO •

    $default  reduce using rule 60 (dialogo)


State 58

   16 texto: texto • NUMERO
   17      | texto • palavra
   62 dialogo: inicioDialogo texto • FIM
   63        | inicioDialogo texto • VIRGULA TU EH adjetivos FIM
   65        | inicioDialogo texto • VIRGULA TU EH $@1 expressao FIM

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    FIM                shift, and go to state 73
    VIRGULA            shift, and go to state 74
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 54

    palavra  go to state 55


State 59

   61 dialogo: inicioDialogo if_sentenca • FIM

    FIM  shift, and go to state 75


State 60

   45 valor: TU MESMO •

    $default  reduce using rule 45 (valor)


State 61

   49 expressao: ARTIGO SOMAR • ENTRE valor E valor

    ENTRE  shift, and go to state 76


State 62

   50 expressao: ARTIGO SUBTRAIR • ENTRE valor E valor

    ENTRE  shift, and go to state 77


State 63

   52 expressao: ARTIGO DIVIDIR • ENTRE valor E valor

    ENTRE  shift, and go to state 78


State 64

   51 expressao: ARTIGO MULTIPLICAR • ENTRE valor E valor

    ENTRE  shift, and go to state 79


State 65

   57 condicao: expressao NAO • FOR MENOR expressao
   58         | expressao NAO • FOR MAIOR expressao
   59         | expressao NAO • FOR IGUAL expressao

    FOR  shift, and go to state 80


State 66

   54 condicao: expressao FOR • MAIOR expressao
   55         | expressao FOR • MENOR expressao
   56         | expressao FOR • IGUAL expressao

    MAIOR  shift, and go to state 81
    MENOR  shift, and go to state 82
    IGUAL  shift, and go to state 83


State 67

   53 if_sentenca: SE condicao VIRGULA • ENTAO expressao

    ENTAO  shift, and go to state 84


State 68

   43 alteracaoElenco: ABRE_COLCHETES texto FECHA_COLCHETES •

    $default  reduce using rule 43 (alteracaoElenco)


State 69

   12 declaracaoCenario: ABRE_PARENTESES texto VIRGULA • texto FECHA_PARENTESES

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21

    texto    go to state 85
    palavra  go to state 31


State 70

   13 concatenarCenario: ADICIONAR_CENARIO INICIO texto • FIM
   16 texto: texto • NUMERO
   17      | texto • palavra

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    FIM                shift, and go to state 86
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 54

    palavra  go to state 55


State 71

   14 substituiCenario: SUBSTITUIR_CENARIO texto POR • texto NO_CENARIO

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21

    texto    go to state 87
    palavra  go to state 31


State 72

   41 declaracao: declaracaoInicio texto FIM •

    $default  reduce using rule 41 (declaracao)


State 73

   62 dialogo: inicioDialogo texto FIM •

    $default  reduce using rule 62 (dialogo)


State 74

   63 dialogo: inicioDialogo texto VIRGULA • TU EH adjetivos FIM
   65        | inicioDialogo texto VIRGULA • TU EH $@1 expressao FIM

    TU  shift, and go to state 88


State 75

   61 dialogo: inicioDialogo if_sentenca FIM •

    $default  reduce using rule 61 (dialogo)


State 76

   49 expressao: ARTIGO SOMAR ENTRE • valor E valor

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    EU                 shift, and go to state 40
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    TU                 shift, and go to state 41
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 43

    texto    go to state 44
    palavra  go to state 31
    valor    go to state 89


State 77

   50 expressao: ARTIGO SUBTRAIR ENTRE • valor E valor

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    EU                 shift, and go to state 40
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    TU                 shift, and go to state 41
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 43

    texto    go to state 44
    palavra  go to state 31
    valor    go to state 90


State 78

   52 expressao: ARTIGO DIVIDIR ENTRE • valor E valor

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    EU                 shift, and go to state 40
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    TU                 shift, and go to state 41
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 43

    texto    go to state 44
    palavra  go to state 31
    valor    go to state 91


State 79

   51 expressao: ARTIGO MULTIPLICAR ENTRE • valor E valor

    MAIOR              shift, and go to state 3
    MENOR              shift, and go to state 4
    IGUAL              shift, and go to state 5
    NAO                shift, and go to state 6
    FOR                shift, and go to state 7
    ENTAO              shift, and go to state 8
    EU                 shift, and go to state 40
    SAEM               shift, and go to state 10
    ENTRAM             shift, and go to state 11
    TODOS              shift, and go to state 12
    SOMAR              shift, and go to state 13
    TOKEN              shift, and go to state 16
    ADJETIVO_POSITIVO  shift, and go to state 17
    ADJETIVO_NEGATIVO  shift, and go to state 18
    TU                 shift, and go to state 41
    E                  shift, and go to state 19
    ENTRE              shift, and go to state 20
    ARTIGO             shift, and go to state 21
    NUMERO             shift, and go to state 43

    texto    go to state 44
    palavra  go to state 31
    valor    go to state 92


State 80

   57 condicao: expressao NAO FOR • MENOR expressao
   58         | expressao NAO FOR • MAIOR expressao
   59         | expressao NAO FOR • IGUAL expressao
